src/test/ui/parser/removed-syntax-fixed-vec.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `]`, found `*`
  --> $DIR/removed-syntax-fixed-vec.rs:3:17
   |
LL | type v = [isize * 3]; //~ ERROR expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `]`, found `*`
   |                 ^ expected one of 7 possible tokens here

error: aborting due to previous error

